<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Square</string>
    <string name="error_unable_to_connect">No internet connection</string>
    <string name="intro_title_1">Discover and enjoy\nvenues in your city</string>
    <string name="intro_title_2">Attend your favourite places\nand share the experience</string>
    <string name="intro_title_3">Bring the game into\nyour real life</string>
    <string name="intro_content_1">Wide selection of premium perks like\nrestaurants, gyms, beauty salons and\nmuch more all around you.</string>
    <string name="intro_content_2">Surf through the multiple tailored\noffers available everyday, book your\nspot and promote them.</string>
    <string name="intro_content_3">Raise your ranking, gain credits and\nunlock new features to claim\nawesome rewards.</string>
    <string name="checklist">Checklist</string>
    <string name="checklist_text1">Check-in and present this coupon to the staff members</string>
    <string name="checklist_text2">Take action! Fulfil your duty and gain extra credits</string>
    <string name="checklist_text3">Just a moment to quick rate your experience</string>
    <string name="next">Next</string>
    <string name="next_step">Next &#8594;</string>
    <string name="lets_start">LET\'S START</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="switch_to_premium">Switch to Premium</string>
    <string name="remember_to">Remember to:</string>
    <string name="avoid_to">Avoid to:</string>
    <string name="picture_typologies">Picture typologies:</string>
    <string name="events">Events</string>
    <string name="calendar">Calendar</string>
    <string name="schedule">Schedule</string>
    <string name="event_details">Event Details</string>
    <string name="one_way_from">One way from</string>
    <string name="return_to">Return to</string>
    <string name="transfer">Transfer</string>
    <string name="status">Status:</string>
    <string name="no_dinner_available">No dinner\navailable</string>
    <string name="no_ride_available">No ride\navailable</string>
    <string name="check_out_from_party">Check out from party</string>
    <string name="party">Party</string>
    <string name="your_final_selection">Your final selection</string>
    <string name="accept">Accept</string>
    <string name="review_proposal">Review proposal</string>
    <string name="confirm_reservation">Confirm reservation</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="i_wont_go_anymore">I won\'t go anymore</string>
    <string name="profession_1">Video creator</string>
    <string name="profession_2">Music creator</string>
    <string name="profession_3">Other</string>
    <string name="speciality_1">Beauty</string>
    <string name="speciality_2">Diy</string>
    <string name="speciality_3">Entertainment</string>
    <string name="speciality_4">Family</string>
    <string name="speciality_5">Fashion</string>
    <string name="speciality_6">Fitness</string>
    <string name="capability_1">Capability 1</string>
    <string name="capability_2">Capability 2</string>
    <string name="capability_3">Capability 3</string>
    <string name="preferences_1">Preferences 1</string>
    <string name="preferences_2">Preferences 2</string>
    <string name="preferences_3">Preferences 3</string>
    <string name="organic_followers">Organic followers</string>
    <string name="published_posts">Published post</string>
    <string name="posts_per_week">Posts per week</string>
    <string name="posts_owned_by_you">Posts owned by you</string>
    <string name="account_availability">Account availability</string>
    <string name="account_type">Account type</string>
    <string name="subscribers">Subscribers</string>
    <string name="views_after_30_days">Views after 30 days</string>
    <string name="account_activity">Account activity</string>
    <string name="s_public">Public</string>
    <string name="ac_type_text">Business / Creator</string>
    <string name="active_and_growing">Active and growing</string>
    <string name="optional">(optional)</string>
    <string name="selected_format">%d selected</string>
    <string name="add_cover_image">Add cover image</string>
    <string name="edit_cover_image">Edit cover image</string>
    <string name="requirements_text">Please find here the minimum requisites to be eligible to join square community</string>
    <string name="instagram_requirements">Instagram requirements</string>
    <string name="youtube_requirements">Youtube requirements</string>
    <string name="select_nationality">Select nationality</string>
    <string name="select_date_of_birth">Select date of birth</string>
    <string name="select_gender">Select gender</string>
    <string name="select_profession">Select profession</string>
    <string name="select_speciality">Select speciality</string>
    <string name="select_additional_specialities">Select additional specialities</string>
    <string name="select_capabilities">Select capabilities</string>
    <string name="select_preferences">Select preferences</string>
    <string name="accept_terms">Accept Terms and the Privacy Policy</string>
    <string name="email_error">Enter your email</string>
    <string name="password_error">Enter your password</string>
    <string name="referral_error">Enter valid or delete referral code</string>
    <string name="representation_error">Enter valid or uncheck representation</string>
    <string name="vat_number_error">Enter valid or uncheck vat number</string>
    <string name="invalid_security_code">Invalid security code</string>
    <string name="app_not_installed">This application is not installed on your device</string>
    <string name="upload_action_prntscr">Upload the print screen\nof the action you just done.</string>
    <string name="upload_action_label">Action required to speed up the process in order to release you the credits.</string>
    <string name="upload_photo_gallery">Take a photo or upload a picture from your gallery</string>
    <string name="upload_photo_label">If the picture will be selected from the venue, you\'ll receive 50 credits</string>
    <string name="insta_story_remember_1">Make tags visible</string>
    <string name="insta_story_remember_2">The story should be at least 5 seconds</string>
    <string name="insta_story_remember_3">Tag us @square.app</string>
    <string name="insta_story_remember_4">Tag the venue using %s</string>
    <string name="insta_story_avoid_1">Don\'t remove the story before it expires</string>
    <string name="insta_story_avoid_2">Don\'t repost a story of a friend, covering the tags with other content</string>
    <string name="insta_post_remember_1">Make tags visible</string>
    <string name="insta_post_remember_2">Keep the post on your page for a minimum of 48 hours</string>
    <string name="insta_post_remember_3">Tags to use: %s, @square.app</string>
    <string name="insta_post_remember_4">Hashtags: %s, @squareapp</string>
    <string name="insta_post_avoid_1">Don\'t remove the post before the given time</string>
    <string name="insta_post_avoid_2">Be creative, don\'t repost someone else content</string>
    <string name="tripadvisor_remember_1">Rate the venue 4–5 stars</string>
    <string name="tripadvisor_remember_2">Leave an authentic comment about: food, service, location</string>
    <string name="tripadvisor_avoid_1">Never mention SQUARE app in your review</string>
    <string name="tripadvisor_avoid_2">Don\'t make your comment like a shopping list. Argument the different subjects and tell your experience</string>
    <string name="yelp_remember_1">Rate the venue 4–5 stars</string>
    <string name="yelp_remember_2">Leave an authentic comment about: food, service, location</string>
    <string name="yelp_avoid_1">Never mention SQUARE app in your review</string>
    <string name="yelp_avoid_2">Don\'t make your comment like a shopping list. Argument the different subjects and tell your experience</string>
    <string name="google_places_remember_1">Rate the venue 4–5 stars</string>
    <string name="google_places_remember_2">Leave an authentic comment about: food, service, location</string>
    <string name="google_places_avoid_1">Never mention SQUARE app in your review</string>
    <string name="google_places_avoid_2">Don\'t make your comment like a shopping list. Argument the different subjects and tell your experience</string>
    <string name="fb_review_remember_1">Rate the venue 4–5 stars</string>
    <string name="fb_reviewgoogle_maps_remember_2">Leave an authentic comment about: food, service, location</string>
    <string name="fb_review_avoid_1">Never mention SQUARE app in your review</string>
    <string name="fb_review_avoid_2">Don\'t make your comment like a shopping list. Argument the different subjects and tell your experience</string>
    <string name="fb_post_remember_1">Make tags visible</string>
    <string name="fb_post_remember_2">Keep the post on your page for a minimum of 48 hours</string>
    <string name="fb_post_remember_3">Tags to use: %s, @square.app</string>
    <string name="fb_post_remember_4">Hashtags: %s, @squareapp</string>
    <string name="fb_post_avoid_1">Don\'t remove the post before the given time</string>
    <string name="fb_post_avoid_2">Be creative, don\'t repost someone else content</string>
    <string name="fb_story_remember_1">Make tags visible</string>
    <string name="fb_story_remember_2">The story should be at least 5 seconds</string>
    <string name="fb_story_remember_3">Tag us @square.app</string>
    <string name="fb_story_remember_4">Tag the venue using %s</string>
    <string name="fb_story_avoid_1">Don\'t remove the story before it expires</string>
    <string name="fb_story_avoid_2">Don\'t repost a story of a friend, covering the tags with other content</string>
    <string name="tasks_in_progress_">Tasks in progress:</string>
    <string name="deadline_">Deadline:</string>
    <string name="to_do">To do</string>
    <string name="archive">Archive</string>
    <string name="social_media_skills">Social media skills</string>
    <string name="capabilities_description">You got skills… what are you good at?\nSelect yours from the list below</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="actual_password">Actual password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password_label">Confirm password</string>
    <string name="city">City</string>
    <string name="action_profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="agenda">Agenda</string>
    <string name="chat">Chat</string>
    <string name="confirm_product_details">Confirm product details</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="address">Address</string>
    <string name="label">Label</string>
    <string name="country">Country</string>
    <string name="hint_address">Address</string>
    <string name="zip_code">Zip code</string>
    <string name="im_a">I\'m a</string>
    <string name="main_speciality">Main speciality</string>
    <string name="additional_specialities">Additional specialities</string>
    <string name="i_have_a_representation">I have a representation</string>
    <string name="vat_number">Vat number</string>
    <string name="enter_vat_number">Enter vat number</string>
    <string name="representation">Representation</string>
    <string name="capabilities">Capabilities</string>
    <string name="preferences">Preferences</string>
</resources>