<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_explore"
        android:title="@string/explore"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_agenda"
        android:title="@string/agenda"
        android:icon="@drawable/r_calendar_clock"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_chat"
        android:title="@string/chat"
        android:icon="@drawable/ic_message"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom" />

</menu>