<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:padding="@dimen/v_24dp"
    android:orientation="vertical"
    tools:background="@android:color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/professionError"
            style="@style/RedesignedSpinnerError"
            tools:visibility="visible"
            android:text="@string/select_profession" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_rl_height" >
        <LinearLayout
            android:id="@+id/professionLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/et_bg_rounded_stroke"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" >
            <androidx.appcompat.widget.AppCompatSpinner
                style="@style/RedesignedSpinner"
                android:id="@+id/spinnerProfession"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <ImageView style="@style/RedesignedSpinnerArrow" />

        </LinearLayout>
        <TextView
            style="@style/RedesignedFieldHeader"
            android:text="@string/im_a" />
    </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/v_24dp" >

        <TextView
            android:id="@+id/specialityError"
            style="@style/RedesignedSpinnerError"
            tools:visibility="visible"
            android:text="@string/select_speciality" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_rl_height" >
        <LinearLayout
            android:id="@+id/mainSpecialityLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/et_bg_rounded_stroke"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" >
            <androidx.appcompat.widget.AppCompatSpinner
                style="@style/RedesignedSpinner"
                android:id="@+id/spinnerMainSpeciality"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <ImageView style="@style/RedesignedSpinnerArrow" />

        </LinearLayout>
        <TextView
            style="@style/RedesignedFieldHeader"
            android:text="@string/main_speciality" />
    </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/v_24dp" >

        <TextView
            android:id="@+id/additionalSpecialitiesError"
            style="@style/RedesignedSpinnerError"
            tools:visibility="visible"
            android:text="@string/select_additional_specialities" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_rl_height" >
        <LinearLayout
            android:id="@+id/additionalSpecialitiesLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/et_bg_rounded_stroke"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" >

            <TextView
                style="@style/RedesignedInputField"
                android:id="@+id/tvAdditionalSpecialities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null" />
            <ImageView style="@style/RedesignedSpinnerArrow" />

        </LinearLayout>
        <TextView
            style="@style/RedesignedFieldHeader"
            android:text="@string/additional_specialities" />
    </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/v_24dp" >

        <TextView
            android:id="@+id/capabilitiesError"
            style="@style/RedesignedSpinnerError"
            tools:visibility="visible"
            android:text="@string/select_capabilities" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_rl_height" >
        <!--   TODO: this view onClick -> call spinner onClick  -->
        <LinearLayout
            android:id="@+id/capabilitiesLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/et_bg_rounded_stroke"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" >

            <TextView
                style="@style/RedesignedInputField"
                android:id="@+id/tvCapabilities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null" />
            <ImageView style="@style/RedesignedSpinnerArrow" />

        </LinearLayout>
        <TextView
            style="@style/RedesignedFieldHeader"
            android:text="@string/capabilities" />
    </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/v_24dp" >

        <TextView
            android:id="@+id/preferencesError"
            style="@style/RedesignedSpinnerError"
            tools:visibility="visible"
            android:text="@string/select_preferences" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_rl_height" >
        <!--   TODO: this view onClick -> call spinner onClick  -->
        <LinearLayout
            android:id="@+id/preferencesLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/et_bg_rounded_stroke"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" >

            <TextView
                style="@style/RedesignedInputField"
                android:id="@+id/tvPreferences"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null" />
            <ImageView style="@style/RedesignedSpinnerArrow" />

        </LinearLayout>
        <TextView
            style="@style/RedesignedFieldHeader"
            android:text="@string/preferences" />
    </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/v_24dp"
        android:layout_marginStart="@dimen/v_minus_24dp"
        android:layout_marginEnd="@dimen/v_minus_24dp"
        android:layout_height="1dp"
        android:background="@color/gray_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topContainer" />

    <Switch
        style="@style/Models16SemiBoldText"
        android:textSize="@dimen/text_16"
        android:id="@+id/switchRepresentation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/v_48dp"
        tools:checked="true"
        android:text="@string/i_have_a_representation"
        android:thumb="@drawable/switch_thumb"
        android:track="@drawable/switch_track" />

    <RelativeLayout
        android:id="@+id/representationRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_rl_height"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="@dimen/v_8dp"
        android:layout_marginBottom="@dimen/v_16dp" >
        <com.square.android.utils.widget.ErrorEditText
            style="@style/RedesignedInputField"
            android:id="@+id/et_representation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"/>

        <TextView
            style="@style/RedesignedFieldHeader"
            android:text="@string/representation" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topContainer" />

    <Switch
        style="@style/Models16SemiBoldText"
        android:textSize="@dimen/text_16"
        android:id="@+id/switchVat"
        android:layout_width="match_parent"
        android:layout_height="@dimen/v_48dp"
        tools:checked="true"
        android:text="@string/vat_number"
        android:thumb="@drawable/switch_thumb"
        android:track="@drawable/switch_track" />

    <RelativeLayout
        android:id="@+id/vatNumberRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_rl_height"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="@dimen/v_8dp"
        android:layout_marginBottom="@dimen/v_16dp" >
        <com.square.android.utils.widget.ErrorEditText
            style="@style/RedesignedInputField"
            android:id="@+id/et_vat_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:imeOptions="actionDone"/>

        <TextView
            style="@style/RedesignedFieldHeader"
            android:text="@string/enter_vat_number" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/v_minus_24dp"
        android:layout_marginEnd="@dimen/v_minus_24dp"
        android:layout_height="1dp"
        android:background="@color/gray_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topContainer" />

</LinearLayout>