<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingStart="24dp"
        tools:background="@android:color/white"
        android:paddingEnd="24dp" >

        <TextView
            android:id="@+id/confirmLabel"
            style="@style/Models16SemiBoldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_product_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp" >

            <TextView
                android:id="@+id/sizeSpinner"
                style="@style/NewInputSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:hint="@string/size"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/colorSpinner"
                style="@style/NewInputSpinner"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:hint="@string/color" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>