<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:padding="@dimen/v_24dp"
    android:orientation="vertical"
    tools:background="@android:color/white" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_rl_height" >

        <com.square.android.utils.widget.ErrorEditText
            style="@style/RedesignedInputField"
            android:id="@+id/actual_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <TextView
            style="@style/RedesignedFieldHeader"
            android:text="@string/actual_password" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_rl_height"
        android:layout_marginTop="@dimen/v_24dp" >

        <com.square.android.utils.widget.ErrorEditText
            style="@style/RedesignedInputField"
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <TextView
            style="@style/RedesignedFieldHeader"
            android:text="@string/new_password" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_rl_height"
        android:layout_marginTop="@dimen/v_24dp" >

        <com.square.android.utils.widget.ErrorEditText
            style="@style/RedesignedInputField"
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <TextView
            style="@style/RedesignedFieldHeader"
            android:text="@string/confirm_password_label" />
    </RelativeLayout>

</LinearLayout>